# gra_ekonomiczna

./: CMakeLists.txt  README.md
src/: RandomNameGenerator.hpp  company.cpp  company.hpp  credit.cpp  credit.hpp  game.cpp  game.hpp  main.cpp
src/employees/: employee.cpp  employee.hpp  employees.hpp  engineer.cpp  engineer.hpp  marketer.cpp  marketer.hpp  warehouseman.cpp  warehouseman.hpp  worker.cpp  worker.hpp
